# weather-etl

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  README.md  etl.py  pyproject.toml
data/: ETL_developer_Case_2.json
output/: alerts.csv  current_weather.csv  forecast.csv  summary_report.txt  temp_analysis.csv
schema/: data_class.py
tests/: mock_data.json  test_weather_pipeline.py
util/: __init__.py  logger.py
